syntax = "proto3";
package cascadia.inflation.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cascadia/inflation/v1/genesis.proto";
import "cascadia/inflation/v1/inflation_params.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/cascadiafoundation/cascadia/x/inflation/types";

// Query provides defines the gRPC querier service.
service Query {
  //  AnnualProvisions current minting annual provisions value.
  rpc AnnualProvisions(QueryAnnualProvisionsRequest) returns (QueryAnnualProvisionsResponse) {
    option (google.api.http).get = "/cascadia/inflation/v1/annual_provisions";
  }

  // InflationRate retrieves the inflation rate of the current period.
  rpc InflationRate(QueryInflationRateRequest) returns (QueryInflationRateResponse) {
    option (google.api.http).get = "/cascadia/inflation/v1/inflation_rate";
  }

  // Params retrieves the total set of minting parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cascadia/inflation/v1/params";
  }

  // Queries a InflationControlParams by index.
  rpc InflationControlParams (QueryGetInflationControlParamsRequest) returns (QueryGetInflationControlParamsResponse) {
    option (google.api.http).get = "/cascadia/inflation/v1/inflation_control_params";
  
  }
}

// QueryAnnualProvisionsRequest is the request type for the
// Query/AnnualProvisions RPC method.
message QueryAnnualProvisionsRequest {}

// QueryAnnualProvisionsResponse is the response type for the
// Query/AnnualProvisions RPC method.
message QueryAnnualProvisionsResponse {
  // annual_provisions is the current minting annual provisions value.
  bytes annual_provisions = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// QueryInflationRateRequest is the request type for the Query/InflationRate RPC
// method.
message QueryInflationRateRequest {}

// QueryInflationRateResponse is the response type for the Query/InflationRate
// RPC method.
message QueryInflationRateResponse {
  // inflation_rate by which the total supply increases within one period
  string inflation_rate = 1
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}


// ------------------------------Inflation Control Params Query ---------------------

message QueryGetInflationControlParamsRequest {}

message QueryGetInflationControlParamsResponse {
  InflationControlParams InflationControlParams = 1 [(gogoproto.nullable) = false];
}
